# smoothie

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  Dockerfile.tauri  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  dependabot.yml  security.yml
app/: globals.css  layout.tsx  page.tsx
components/: apps-list.tsx  auth-guard.tsx  capture-review.tsx  dashboard.tsx  help-support.tsx  monitor-arrangement.tsx  monitor-editor.tsx  monitor-list.tsx  navbar.tsx  profile-manager.tsx  settings.tsx  sidebar.tsx  summary-cards.tsx  system-capture-constants.ts  system-capture-error-boundary.tsx  system-capture-utils.ts  system-capture.tsx  top-bar.tsx  windows-list.tsx
contexts/: auth-context.tsx  subscription-context.tsx
docs/: README.md
hooks/: use-profiles.ts  use-system-detection.ts
lib/: tauri.ts
screenshots/: README.md
src-tauri/: Cargo.toml  DATABASE_SETUP.md  Info.plist  clippy.toml  entitlements.plist  index.html  rustfmt.toml  setup_db.sh  tauri.conf.json  test_db.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: privileged_helper.sh  seed.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  queries.rs
src-tauri/src/error/: mod.rs
src-tauri/src/handlers/: app.rs  audit.rs  automation.rs  browser.rs  feedback.rs  mod.rs  monitor.rs  profile.rs  subscription.rs  sync.rs  system.rs  user.rs  window.rs
src-tauri/src/logging/: logger.rs  metrics.rs  mod.rs  traces.rs
src-tauri/src/models/: dto.rs  entities.rs  mod.rs
src-tauri/src/repositories/: app_repository.rs  audit_repository.rs  automation_repository.rs  browser_tab_repository.rs  mod.rs  monitor_repository.rs  profile_repository.rs  subscription_repository.rs  supabase_audit_repository.rs  sync_repository.rs  user_settings_repository.rs
src-tauri/src/security/: auth.rs  middleware.rs  mod.rs
src-tauri/src/services/: app_service.rs  audit_service.rs  automation_service.rs  browser_service.rs  mod.rs  monitor_service.rs  profile_service.rs  sync_service.rs  system_service.rs  user_settings_service.rs  window_service.rs
src-tauri/src/state/: mod.rs
src-tauri/src/utils/: encryption.rs  mod.rs  validation.rs
(+12 files in other folders)
