[package]
name = "smoothie"
version = "0.1.0"
edition = "2021"

[lib]
name = "smoothie_lib"
path = "src/lib.rs"

[[bin]]
name = "smoothie"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
dotenv = "0.15"
anyhow = "1"
async-trait = "0.1"
parking_lot = "0.12"
lazy_static = "1"
regex = "1"
validator = { version = "0.20", features = ["derive"] }
dashmap = "6"
dirs = "6"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.2.0"
reqwest = { version = "0.12", features = ["json"] }

# Platform-specific dependencies (macOS only for now)
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
objc = "0.2"
cocoa = "0.26"
io-kit-sys = "0.4"
mach2 = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
